--- a/style.css
+++ b/style.css
@@ -3,25 +3,20 @@ body {
     font-family: 'Mate SC', serif;
     font-weight: bold;
     color: white;
-
 }
 
 .project-window {
     display: flex;
     align-items: center;
     flex-direction: column;
-    gap: 140px;
+    gap: 120px;
     margin-top: 30px;
 }
 
 .date-time, .unix-time {
     font-size: 50px;
-    position: absolute;
-    top: 390px;
-}
-
-.unix-time {
-    top: 130px;
+    margin-top: 80px;
+    margin-left: -180px;
 }
 
 .loader,
@@ -39,15 +34,24 @@ body {
 .loader {
     color: #ffffff;
     font-size: 8px;
-    margin-left: 550px;
-    margin-top: 105px;
-    position: relative;
+    position: absolute;
     text-indent: -9999em;
     -webkit-transform: translateZ(0);
     -ms-transform: translateZ(0);
     transform: translateZ(0);
     -webkit-animation-delay: -0.16s;
     animation-delay: -0.16s;
+    display: none;
+}
+
+#unix-loader {
+    top: 117px;
+    left: 1000px;
+}
+
+#date-loader {
+    top: 380px;
+    left: 1000px;
 }
 
 .loader:before,
